--- a/Softnotik.Modules.Customers.Infrastructure/Softnotik.Modules.CustomerModule.Infrastructure.csproj
+++ b/Softnotik.Modules.Customers.Infrastructure/Softnotik.Modules.CustomerModule.Infrastructure.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Softnotik.Modules.Customers.Application\Softnotik.Modules.CustomerModule.Application.csproj" />
+    <ProjectReference Include="..\Softnotik.Modules.Customers.Presentation\Softnotik.Modules.CustomerModule.Presentation.csproj" />
+    <ProjectReference Include="..\Softnotik.Shared.Infrastructure\Softnotik.Shared.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
