--- a/Softnotik.Shared.Infrastructure/Softnotik.Shared.Infrastructure.csproj
+++ b/Softnotik.Shared.Infrastructure/Softnotik.Shared.Infrastructure.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EFCore.NamingConventions" Version="8.0.3" />
+    <PackageReference Include="MassTransit" Version="8.2.1" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Softnotik.Shared.Application\Softnotik.Shared.Application.csproj" />
+  </ItemGroup>
+
 </Project>
